some fix swagger and close todo.
