# internal/ports/httpgin/handlers.go
@@ -9,8 +9,6 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// TODO! SWAGGER
-
 // Метод для получения страны (country)
 // @Summary Получение страны
 // @Description Возвращает страну
@@ -20,6 +18,9 @@ import (
 // @Param Authorization header string true "Bearer token"
 // @Param country_id path int true "ID страны"
 // @Success 200 {object} Get_CountryById_Response
+// @Failure 400 {object}  Error_Response
+// @Failure 401 {object}  Error_Response
+// @Failure 500  {object}  Error_Response
 // @Router /api/v1/country/{country_id} [get]
 func getCountryById(c *gin.Context, a *app.App) {
 	country_id, err := strconv.Atoi(c.Param("country_id"))
@@ -43,6 +44,8 @@ func getCountryById(c *gin.Context, a *app.App) {
 // @Produce json
 // @Param Authorization header string true "Bearer token"
 // @Success 200 {object} []Get_CountryById_Response
+// @Failure 401 {object}  Error_Response
+// @Failure 500  {object}  Error_Response
 // @Router /api/v1/country [get]
 func getCountryAll(c *gin.Context, a *app.App) {
 	countries, err := a.Get_All_Country(c)
@@ -63,6 +66,9 @@ func getCountryAll(c *gin.Context, a *app.App) {
 // @Param Authorization header string true "Bearer token"
 // @Param country body Create_Country_Request true "Данные страны"
 // @Success 200 {object} Create_Country_Response
+// @Failure 400 {object}  Error_Response
+// @Failure 401 {object}  Error_Response
+// @Failure 500  {object}  Error_Response
 // @Router /api/v1/country [post]
 func createCountry(c *gin.Context, a *app.App) {
 	var reqBody Create_Country_Request
@@ -89,6 +95,9 @@ func createCountry(c *gin.Context, a *app.App) {
 // @Param Authorization header string true "Bearer token"
 // @Param country body Update_CountryById_Request true "Данные страны"
 // @Success 200 {object} Update_CountryById_Response
+// @Failure 400 {object}  Error_Response
+// @Failure 401 {object}  Error_Response
+// @Failure 500  {object}  Error_Response
 // @Router /api/v1/country [put]
 func updateCountryById(c *gin.Context, a *app.App) {
 	var reqBody Update_CountryById_Request
@@ -120,6 +129,9 @@ func updateCountryById(c *gin.Context, a *app.App) {
 // @Param Authorization header string true "Bearer token"
 // @Param country body Delete_CountryById_Request true "ID страны"
 // @Success 200 {object} Delete_CountryById_Response
+// @Failure 400 {object}  Error_Response
+// @Failure 401 {object}  Error_Response
+// @Failure 500  {object}  Error_Response
 // @Router /api/v1/country [delete]
 func deleteCountryById(c *gin.Context, a *app.App) {
 	var reqBody Delete_CountryById_Request
